--- a/web2/index.html
+++ b/web2/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
 
-<p id="test1">Paragraph text1 with ID = "test1"</p>
+<p id="test1" class="tester">Paragraph text1 with ID = "test1"</p>
 <p id="test2">Paragraph text2 with ID = "test2"</p>
-<p id="test3">Paragraph text3 with ID = "test3"</p>
+<p id="test3" class="tester">Paragraph text3 with ID = "test3"</p>
 
 
 
-<button id="button1">Click me to hide paragraphs</button>
+<button id="button1">Click me to hide all paragraphs</button>
 <br><br>
-<button id="button2">Click me to hide test2</button>
+<button id="button2">Click me to hide id="test2" element</button>
+<br><br>
+<button id="button3">Click me to hide class="tester" elements</button>
 
 </body>
 </html>
