--- a/web2/index.html
+++ b/web2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<title>Test Page</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <script src="scripts/main2.js"></script>
@@ -19,6 +19,12 @@
 <button id="button2">Click me to hide id="test2" element</button>
 <br><br>
 <button id="button3">Click me to hide class="tester" elements</button>
+<br><br>
+<button id="button4">Alert button</button>
+<br><br>
+<button id="button5">Crazy Doubleclick</button>
+<br><br>
+<center><button id="button6">Area</button></center>
 
 </body>
 </html>
