--- a/web2/index.html
+++ b/web2/index.html
@@ -44,6 +44,10 @@
 
 <div id="box" style="background:#c93232; height:100px; width:100px; margin:20px; position:relative;"></div>
 
+<p>Input field: <input type="text" id="test3" value="Mickey Mouse"></p>
+<p id="text2Change">Text to change</p>
+<button id="textChanger">Set Text</button>
+
 <br><br>
 <button id="button1">Click me to hide all paragraphs</button>
 <br><br>
