--- a/web2/index.html
+++ b/web2/index.html
@@ -12,7 +12,7 @@
     text-align: center;
     background-color: #486c8e;
     color: white;
-    border: solid 1px #666;
+    border: solid 4px #1a4a99;
     border-radius: 3px;
 }
 
