New Features Added

--- a/web2/index.html
+++ b/web2/index.html
@@ -48,14 +48,15 @@
 <p id="text2Change">Text to change</p>
 <button id="textChanger">Set Text</button>
 
-<br><br>
-<button id="button1">Click me to hide all paragraphs</button>
+
 <br><br>
 <button id="button2">Click me to hide id="test2" element</button>
 <br><br>
 <button id="button3">Click me to hide class="tester" elements</button>
 <br><br>
-<button id="button4">Alert button</button>
+<button id="button1">Click me to hide all paragraphs</button>
+<br><br>
+<button id="button4";background-color="#f44336">Alert button</button>
 <br><br>
 <button id="button5">Big Doubleclick</button>
 
