--- a/web2/index.html
+++ b/web2/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <center>
-  <img src="images/firefox-icon.png" alt="Logo">
+  <img src="images/firefox-icon.png" id="onLogo">
 <div id="flip">Click to slide down panel</div>
 <div id="panel"><p id="test1" class="tester">Welcome to onbiron Web Page</p>
 <p id="test2">Here you can test different jQuery features.</p></div>
